--- a/phase1.ipynb
+++ b/phase1.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# regular expression for validating an Email \n",
-    "#Logic Copy Pasta from here for the email regex expression. It was the best working one that worked across 90k plus emails\n",
+    "#Logic utilized from here for the email regex expression. It was the best working one that worked across 90k plus emails\n",
     "#https://emailregex.com/\n",
     "regex = r\"(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)\""
    ]
